tests/compile_fail/hold_borrow_to_long_mut.rs
use dreck::*;

fn main() {
    new_cell_owner!(owner);
    let a = {
        let root = unsafe { Root::new(owner) };
        let a = root.add(0);
        a.borrow_mut(owner)
    };
    assert_eq!(*a, 0);
}
